bpo-46449: Split frozen modules